// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<StyledButton
  aria-disabled={false}
  aria-label="Button"
  disabled={false}
  onClick={[Function]}
  priority="primary"
  role="button"
  size="large"
>
  <ButtonLabel
    align="center"
    priority="primary"
    size="large"
  >
    Button
  </ButtonLabel>
</StyledButton>
`;

exports[`Button renders disabled normal link 1`] = `
<StyledButton
  aria-disabled={false}
  aria-label="Normal Link"
  disabled={false}
  href="/some/relative/url"
  onClick={[Function]}
  role="button"
>
  <ButtonLabel
    align="center"
  >
    Normal Link
  </ButtonLabel>
</StyledButton>
`;

exports[`Button renders normal link 1`] = `
<StyledButton
  aria-disabled={false}
  aria-label="Normal Link"
  disabled={false}
  href="/some/relative/url"
  onClick={[Function]}
  role="button"
>
  <ButtonLabel
    align="center"
  >
    Normal Link
  </ButtonLabel>
</StyledButton>
`;

exports[`Button renders react-router link 1`] = `
<StyledButton
  aria-disabled={false}
  aria-label="Router Link"
  disabled={false}
  onClick={[Function]}
  role="button"
  to="/some/route"
>
  <ButtonLabel
    align="center"
  >
    Router Link
  </ButtonLabel>
</StyledButton>
`;
